Fix offline app 2
